# c3d_analyzer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  Readme.md  index.html  styles.css
.devcontainer/: devcontainer.json
.github/workflow/: ci.yaml
.github/workflows/: rust.yml
assets/: EtiquetasVariables3.xlsx  GOLFPGA22.mkr  config_file.toml  config_file.yaml  config_file_basic.toml
plugins/app_control/: Cargo.toml
plugins/app_control/src/: file_drop.rs  joins.rs  keyboard.rs  lib.rs  markers.rs  mouse_keyboard.rs  traces.rs  vectors.rs
plugins/bevy_c3d_mod/: Cargo.toml
plugins/bevy_c3d_mod/assets/: golpeo3.c3d
plugins/bevy_c3d_mod/examples/: basic.rs
plugins/bevy_c3d_mod/src/: c3d_loader.rs
plugins/c3d_config/: Cargo.toml  readme.md
plugins/c3d_config/assets/: example.toml
plugins/c3d_config/examples/: basic.rs
plugins/c3d_config/src/: c3d_config.rs  c3d_config_toml.rs  lib.rs
plugins/gui/: Cargo.toml
plugins/gui/bevy_metrics_dashboard/: Cargo.toml
plugins/gui/bevy_metrics_dashboard/src/: core_metrics_plugin.rs  dashboard_plugin.rs  dashboard_window.rs  lib.rs  namespace_tree.rs  plots.rs  registry.rs  registry_plugin.rs  ring.rs
plugins/gui/src/: lib.rs  metrics_dashboard.rs  milestones.rs  theme.rs
plugins/input/: Cargo.toml
plugins/input/src/: lib.rs
plugins/web_bevy_blob_loader/: Cargo.toml
plugins/web_bevy_blob_loader/example/: Cargo.toml
plugins/web_bevy_blob_loader/src/: lib.rs
src/: main.rs
