[package]
name = "proyecto_swing"
version = "0.2.0"
authors = ["Rubén Agustín <r.agussglz@gmail.com>"]
edition = "2021"

license-file = "LICENSE.txt"

[dependencies]
bevy = "^0.15.1"
bevy_blendy_cameras = { version = "0.6.0", features = ["bevy_egui"] }
control_plugin = { path = "plugins/app_control" }
gui_plugin = { path = "plugins/gui" }
wasm-bindgen = "^0.2.73"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
