[package]
name = "config_plugin"
version = "0.1.0"
description = "Plugin to manage c3d configuration"
edition = "2021"

[dependencies]
bevy = "0.14.2" 
bevy_app = "^0.14"
regex = "1.11.0"
serde = {version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[[example]]
name = "basic"
path = "examples/basic.rs"
