[package]
name = "gui_plugin"
version = "0.1.0"
description = "Plugin to manage app's menus"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_egui = "0.30"
bevy_c3d_mod = {path = "../bevy_c3d_mod"}
bevy_metrics_dashboard ={ path = "./bevy_metrics_dashboard" }
control_plugin = { path = "../app_control" }
metrics = "0.24.0"
egui_plot = "0.29.0"
egui_double_slider = "0.3.1"