[package]
name = "gui_plugin"
version = "0.1.0"
description = "Plugin to manage app's menus"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_egui = "0.31.1"
metrics = "0.24.0"
egui_plot = "0.29.0"
egui_double_slider = "0.3.1"
bevy_c3d_mod = {path = "../bevy_c3d_mod"}
control_plugin = { path = "../app_control" }
config_plugin = { path = "../c3d_config" }